// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar Progress over 1 1`] = `
<div
  className="sc-bdfBwQ bLrSyQ"
>
  <div
    className="sc-gsTCUz dMQoKd"
    width={0.012}
  >
    <span
      className="sc-dlfnbm jRsGLv"
    >
      1
      %
    </span>
  </div>
</div>
`;

exports[`ProgressBar Progress under 1 1`] = `
<div
  className="sc-bdfBwQ bLrSyQ"
>
  <div
    className="sc-gsTCUz fcDknw"
    width={-0.9}
  >
    <span
      className="sc-dlfnbm jRsGLv"
    >
      -90
      %
    </span>
  </div>
</div>
`;

exports[`ProgressBar Snapshots No props 1`] = `
<div
  className="sc-bdfBwQ bLrSyQ"
>
  <div
    className="sc-gsTCUz dGIWXR"
  >
    <span
      className="sc-dlfnbm jRsGLv"
    >
      NaN
      %
    </span>
  </div>
</div>
`;

exports[`ProgressBar Snapshots Progress 1`] = `
<div
  className="sc-bdfBwQ bLrSyQ"
>
  <div
    className="sc-gsTCUz fYTMfS"
    width={0.9}
  >
    <span
      className="sc-dlfnbm jRsGLv"
    >
      90
      %
    </span>
  </div>
</div>
`;

exports[`ProgressBar Snapshots Progress&WarningTreshold 1`] = `
<div
  className="sc-bdfBwQ bLrSyQ"
>
  <div
    className="sc-gsTCUz cyFJIg"
    width={0.7}
  >
    <span
      className="sc-dlfnbm jRsGLv"
    >
      70
      %
    </span>
  </div>
</div>
`;

exports[`ProgressBar With children 1`] = `
<div
  className="sc-bdfBwQ bLrSyQ"
>
  <div
    className="sc-gsTCUz fYTMfS"
    width={0.9}
  >
    <span
      className="sc-dlfnbm jRsGLv"
    >
      90
      %
    </span>
  </div>
</div>
`;

exports[`ProgressBar invalid progress 1`] = `
<div
  className="sc-bdfBwQ bLrSyQ"
>
  <div
    className="sc-gsTCUz ktRABs"
    width={null}
  >
    <span
      className="sc-dlfnbm jRsGLv"
    >
      0
      %
    </span>
  </div>
</div>
`;
